fixed more spacing issues

--- a/css/site.css
+++ b/css/site.css
@@ -67,19 +67,24 @@ ul {
     min-width: 2.5rem;
 }
 
+.card-image-height {
+    max-height: 12rem;
+    object-fit:cover;
+}
+
 .header-width {
     width: 100%;
 }
 
 .sidebar-wrapper {
     max-width: 100%;
-    height: 75vh;
+    height: 78vh;
 }
 
 .scroll-sidebar {
     position: fixed;
     overflow-y: scroll;
-    height: 75vh;
+    height: 78vh;
 }
 
 .nav-wrapper {
